--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -407,6 +407,7 @@
     <Folder Include="data\orm\" />
     <Folder Include="data\redis\" />
     <Folder Include="distributed\orleans\" />
+    <Folder Include="infrastructure\contract\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
