--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -276,6 +276,7 @@
     <Compile Include="infrastructure\entity\TimeEntityBase.cs" />
     <Compile Include="infrastructure\entity\TreeEntityBase.cs" />
     <Compile Include="infrastructure\entity\UserEntityBase.cs" />
+    <Compile Include="infrastructure\extension\TreeEntityExtension.cs" />
     <Compile Include="infrastructure\model\ZTreeNode.cs" />
     <Compile Include="infrastructure\provider\UserLoginServiceBase.cs" />
     <Compile Include="infrastructure\ServiceBase.cs" />
@@ -283,6 +284,7 @@
     <Compile Include="infrastructure\service\AuthLoginService.cs" />
     <Compile Include="infrastructure\service\AuthServiceBase.cs" />
     <Compile Include="infrastructure\service\DepartmentServiceBase.cs" />
+    <Compile Include="infrastructure\service\MenuServiceBase.cs" />
     <Compile Include="infrastructure\service\PermissionServiceBase.cs" />
     <Compile Include="infrastructure\service\RoleServiceBase.cs" />
     <Compile Include="infrastructure\service\TreeServiceBase.cs" />
@@ -404,7 +406,6 @@
     <None Include="ReadMe.md" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="core\ioc\" />
     <Folder Include="data\elasticsearch\" />
     <Folder Include="data\orm\" />
     <Folder Include="data\redis\" />
