--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -276,6 +276,7 @@
     <Compile Include="infrastructure\entity\TimeEntityBase.cs" />
     <Compile Include="infrastructure\entity\TreeEntityBase.cs" />
     <Compile Include="infrastructure\entity\UserEntityBase.cs" />
+    <Compile Include="infrastructure\extension\EntityExtension.cs" />
     <Compile Include="infrastructure\extension\TreeEntityExtension.cs" />
     <Compile Include="infrastructure\model\ZTreeNode.cs" />
     <Compile Include="infrastructure\provider\UserLoginServiceBase.cs" />
