--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -23,10 +23,16 @@
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
-  <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.6.9" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
