--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -79,12 +79,9 @@
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
-    <!--账号体系UserInfo/SalesInfo/TraderAccess(切换请一定要修改相应的auth数据库链接字符串！！！)-->
-    <add key="account_system" value="TraderAccess" />
+    <!--auth配置，默认client信息-->
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
-    <!--TraderServiceUrl-->
-    <add key="TraderServiceUrl" value="http://service.qipeilong.net:9006/wsTraderAccess/TraderAccess.svc" />
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
