--- a/ConsoleApp/packages.config
+++ b/ConsoleApp/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" />
@@ -9,6 +11,7 @@
   <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
+  <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.9" targetFramework="net45" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net45" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net45" />
