--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -17,6 +17,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
   <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
@@ -34,6 +37,7 @@
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
   <package id="ZXing.Net" version="0.16.2" targetFramework="net45" />
