--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -352,6 +352,7 @@
     <Compile Include="mq\IMessageQueueConsumer.cs" />
     <Compile Include="mq\IMessageQueueProducer.cs" />
     <Compile Include="mq\RabbitMQSection.cs" />
+    <Compile Include="mq\rabbitmq\RabbitMQClientManager.cs" />
     <Compile Include="mq\rabbitmq\RabbitMqConsumerBase.cs" />
     <Compile Include="mq\rabbitmq\RabbitMqProducer.cs" />
     <Compile Include="mq\MessageQueueCore.cs" />
