--- a/Lib/packages.config
+++ b/Lib/packages.config
@@ -30,6 +30,8 @@
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
