--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -349,6 +349,7 @@
     <Compile Include="infrastructure\entity\UserEntityBase.cs" />
     <Compile Include="infrastructure\extension\EntityExtension.cs" />
     <Compile Include="infrastructure\extension\TreeEntityExtension.cs" />
+    <Compile Include="infrastructure\helper\ZTreeHelper.cs" />
     <Compile Include="infrastructure\model\ZTreeNode.cs" />
     <Compile Include="infrastructure\provider\UserLoginServiceBase.cs" />
     <Compile Include="infrastructure\ServiceBase.cs" />
