--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -231,6 +231,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="core\Lazy_.cs" />
     <Compile Include="core\StaticData.cs" />
     <Compile Include="data\DataSourceContextBase.cs" />
     <Compile Include="data\ef\EFRepositoryBase.cs" />
