--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -32,6 +32,8 @@
   <package id="SharpRaven.Log4Net" version="1.5.2" targetFramework="net45" />
   <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
+  <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
 </packages>
