--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -44,34 +44,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--加载插件-->
     <add key="LoadPlugin" value="true=" />
     <add key="disable_timestamp_check" value="true" />
     <add key="sign_key" value="cqmyg-ysdss-jtwmy-dtsgx" />
     <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
     <add key="Origin_Allow" value="local" />
-    <!--域名用逗号隔开-->
+    <!--跨域域名用逗号隔开-->
     <add key="AllowDomains" value="" />
-    <add key="SmptServer" value="smtp.epcservices.com.cn" />
-    <add key="SmptLoginName" value="reception@epcservices.com.cn" />
-    <add key="SmptPassWord" value="Colin5215" />
-    <add key="SmptSenderName" value="EPC_WEBSITE" />
-    <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
-    <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
-    <!--SSO登录地址-->
-    <add key="SSOLoginUrl" value="http://localhost:51735/sso/login/" />
-    <!--SSO退出地址-->
-    <add key="SSOLogoutUrl" value="http://localhost:51735/sso/logout/" />
-    <!--SSO中用来检查登录信息的接口-->
-    <add key="CheckLoginInfoUrl" value="http://sso.qipeilong.cn/sso/CheckLoginInfo/" />
-    <!--在SSO中配置的tokenID-->
-    <add key="WebToken" value="***" />
-    <!--默认跳转地址-->
-    <add key="DefaultRedirectUrl" value="http://sso.qipeilong.cn/user/userlist/" />
-    <!--指定跳回地址-->
-    <add key="SSO_CONTINUE_URL" value="" />
-    <!--指定服务器跳转，还是把跳转地址返回给前端跳转-->
-    <add key="SSO_NO_LOGIN_RESULT_FOR_INTERFACE" value="" />
+    <!--七牛-->
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
     <add key="QiniuBucketName" value="hiwjcn" />
@@ -82,6 +64,7 @@
     <!--auth配置，默认client信息-->
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
+    <!--下面还要配置途虎api请求密钥，安全起见，没有放在项目中，发布的时候请注意加上-->
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
@@ -139,6 +122,7 @@
       <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib" />
     </modules>
   </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -179,6 +163,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <!--配置EF节点开始 如果使用[DbConfigurationType(typeof(SqlServerConfiguration))]下面这个节点就不需要了 -->
   <!--
   <entityFramework>
