--- a/Lib/Lib.nuspec
+++ b/Lib/Lib.nuspec
@@ -6,8 +6,8 @@
     <title>公共组件库Lib</title>
     <authors>王俊</authors>
     <iconUrl>http://hiwjcn.qiniudn.com/tools.png</iconUrl>
-    <licenseUrl>https://github.com/hiwjcn/hiwjcn</licenseUrl>
-    <projectUrl>https://github.com/hiwjcn/hiwjcn</projectUrl>
+    <licenseUrl>https://github.com/hiwjcn</licenseUrl>
+    <projectUrl>https://github.com/hiwjcn</projectUrl>
     <description>公共组件库Lib</description>
   </metadata>
 </package>
