--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -50,7 +50,7 @@
         <levelMax value="ERROR" />
       </filter>
     </appender>
-    <appender name="ERROR_ES" type="Lib.log.ESLogAppender">
+    <appender name="ERROR_ES" type="Lib.extra.log.ESLogAppender">
       <bufferSize value="1" />
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="ERROR" />
