--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -4,11 +4,14 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net45" />
   <package id="Autofac" version="4.6.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
@@ -18,6 +21,7 @@
   <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
+  <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
