--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -31,8 +31,8 @@
   <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
     <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
-    <!--auth数据库-->
-    <add name="db" connectionString="User ID=sa;Initial Catalog=parties_auth;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <!--auth数据库parties_auth-->
+    <add name="db" connectionString="User ID=sa;Initial Catalog=auth_test;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <!--parties数据库-->
     <add name="db_parties" connectionString="User ID=sa;Initial Catalog=parties;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
