--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -300,7 +300,9 @@
     <Compile Include="infrastructure\entity\OrganizationEntityBase.cs" />
     <Compile Include="infrastructure\entity\PageEntityBase.cs" />
     <Compile Include="infrastructure\extension\CalendarExtension.cs" />
+    <Compile Include="infrastructure\helper\UserLoginHelper.cs" />
     <Compile Include="infrastructure\service\PageServiceBase.cs" />
+    <Compile Include="infrastructure\service\UserLoginServiceBase.cs" />
     <Compile Include="infrastructure\service\UserServiceWithDepartmentBase.cs" />
     <Compile Include="task\QuartzExtension.cs" />
     <Compile Include="task\TaskContainer.cs" />
