--- a/Hiwjcn.Service/Hiwjcn.Service.csproj
+++ b/Hiwjcn.Service/Hiwjcn.Service.csproj
@@ -161,6 +161,10 @@
     <Compile Include="QiniuHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Auth\QPLUserLoginService.cs" />
+    <Compile Include="User\DepartmentService.cs" />
+    <Compile Include="User\PermissionService.cs" />
+    <Compile Include="User\RoleService.cs" />
+    <Compile Include="User\UserLoginService.cs" />
     <Compile Include="User\UserService.cs" />
   </ItemGroup>
   <ItemGroup />
