--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -27,6 +27,7 @@
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
   <package id="StringTemplate4" version="4.0.8" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
