--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -290,10 +290,12 @@
     <Compile Include="data\ef\EFManager.cs" />
     <Compile Include="data\SerializeBase.cs" />
     <Compile Include="infrastructure\entity\CalendarEventTimeEntity.cs" />
-    <Compile Include="infrastructure\entity\OrganizationEntityBase.cs" />
+    <Compile Include="infrastructure\entity\common\EventLogEntityBase.cs" />
+    <Compile Include="infrastructure\entity\user\OrganizationEntityBase.cs" />
     <Compile Include="infrastructure\entity\PageEntityBase.cs" />
     <Compile Include="infrastructure\extension\CalendarExtension.cs" />
     <Compile Include="infrastructure\helper\UserLoginHelper.cs" />
+    <Compile Include="infrastructure\service\common\EventLogServiceBase.cs" />
     <Compile Include="infrastructure\service\organization\OrganizationServiceBase.cs" />
     <Compile Include="infrastructure\service\PageServiceBase.cs" />
     <Compile Include="infrastructure\service\user\UserLoginServiceBase.cs" />
@@ -348,13 +350,13 @@
     <Compile Include="infrastructure\controller\CRUDControllerBase.cs" />
     <Compile Include="infrastructure\controller\UserLoginControllerBase.cs" />
     <Compile Include="infrastructure\entity\AreaEntityBase.cs" />
-    <Compile Include="infrastructure\entity\AuthEntityBase.cs" />
+    <Compile Include="infrastructure\entity\auth\AuthEntityBase.cs" />
     <Compile Include="infrastructure\entity\BaseEntity.cs" />
     <Compile Include="infrastructure\entity\CatalogEntityBase.cs" />
     <Compile Include="infrastructure\entity\MenuEntityBase.cs" />
     <Compile Include="infrastructure\entity\TimeEntityBase.cs" />
     <Compile Include="infrastructure\entity\TreeEntityBase.cs" />
-    <Compile Include="infrastructure\entity\UserEntityBase.cs" />
+    <Compile Include="infrastructure\entity\user\UserEntityBase.cs" />
     <Compile Include="infrastructure\extension\EntityExtension.cs" />
     <Compile Include="infrastructure\extension\TreeEntityExtension.cs" />
     <Compile Include="infrastructure\helper\TreeHelper.cs" />
@@ -494,7 +496,6 @@
   <ItemGroup>
     <Folder Include="distributed\orleans\" />
     <Folder Include="infrastructure\contract\" />
-    <Folder Include="infrastructure\entity\user\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
