--- a/net-45/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/net-45/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Tasks\ClearRequestLogTask.cs" />
     <Compile Include="Tasks\ConcurrentTestTask.cs" />
     <Compile Include="Tasks\DataReportTask.cs" />
+    <Compile Include="Tasks\TaskManager.cs" />
     <Compile Include="Tasks\UpdateEsIndexTask.cs" />
     <Compile Include="UserController.cs" />
     <Compile Include="Simple_CRUD.cs" />
